k8s-autoscale-controller/platform/kubernetes/envoy/configmap-lb-envoy.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
data:
  envoy.yaml: |
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address: { address: 0.0.0.0, port_value: 8201 }

    static_resources:
      listeners:
        - name: listener_1
          address:
            socket_address: { address: 0.0.0.0, port_value: 8202 }
          filter_chains:
            - filters:
                - name: envoy.http_connection_manager
                  config:
                    stat_prefix: ingress_http
                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: local_service
                          domains: ["*"]
                          routes:
                            - match: { prefix: "/" }
                              route: { host_rewrite: python_headless_webapp, cluster: pythonwebapp, timeout: 900s }
                    http_filters:
                      - name: envoy.router
      clusters:
        - name: pythonwebapp
          connect_timeout: 120s
          type: STRICT_DNS
          dns_lookup_family: V4_ONLY
          lb_policy: LEAST_REQUEST
          hosts: [{ socket_address: { address: pythonwebapp.default.svc.cluster.local, port_value: 9101 }}]
